Add cross-validation: 5-fold repeated 20 times (N_REPEATS=20); keep only best (TOP_K) and clean GA artifacts

--- a/code/mgmt_ga_rf_template.ipynb
+++ b/code/mgmt_ga_rf_template.ipynb
@@ -18,11 +18,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "id": "86674e0c",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import random\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -46,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "id": "3e0cfa16",
    "metadata": {},
    "outputs": [
@@ -118,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "id": "0393a9ca",
    "metadata": {},
    "outputs": [
@@ -165,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "id": "e44be35f",
    "metadata": {},
    "outputs": [
@@ -256,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
    "id": "c8e8f3cc",
    "metadata": {},
    "outputs": [],
@@ -264,6 +265,7 @@
     "# ================================\n",
     "# 1. set up data and base model\n",
     "# ================================\n",
+    "\n",
     "# make the global variables that the original GA code expects\n",
     "# New_FS: feature table to search on (your X_train)\n",
     "New_FS = X_train.copy()\n",
@@ -271,7 +273,7 @@
     "# y_trn: labels for GA to use during k-fold CV\n",
     "y_trn = y_train.reset_index(drop=True)\n",
     "\n",
-    "# kfold: GA will reuse the same stratified 5-fold split every time\n",
+    "# NOTE: kfold will be re-created inside the outer loop for each repeat\n",
     "kfold = StratifiedKFold(n_splits=5, shuffle=True, random_state=42)\n",
     "\n",
     "# model: this is the RF the original code keeps calling inside fitness_score\n",
@@ -281,12 +283,16 @@
     "    n_jobs=-1,\n",
     "    random_state=42,\n",
     "    class_weight=\"balanced_subsample\"\n",
-    ")"
+    ")\n",
+    "\n",
+    "# GA/global hyperparameters\n",
+    "size = 50                              # population size (example)\n",
+    "n_feat = New_FS.shape[1]               # number of features"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "20f4b4e8",
    "metadata": {},
    "outputs": [],
@@ -382,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 43,
    "id": "c531ddf9",
    "metadata": {},
    "outputs": [],
@@ -425,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 44,
    "id": "4d569e0e",
    "metadata": {},
    "outputs": [],
@@ -486,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 45,
    "id": "fd9f5304",
    "metadata": {},
    "outputs": [],
@@ -534,8 +540,72 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a600b576",
+   "metadata": {},
+   "source": [
+    "# GA BEST NPZ"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 46,
+   "id": "bbffc8ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BEST_PATH = \"../data/ga_best.npz\"\n",
+    "TOP_K = 5\n",
+    "\n",
+    "def update_top_solutions(best_path, new_score, new_mask, new_cols, top_k=5):\n",
+    "    \"\"\"\n",
+    "    Keep at most `top_k` best GA solutions across all chunks.\n",
+    "    new_score: float\n",
+    "    new_mask:  1D bool array\n",
+    "    new_cols:  1D int array (indices of selected features)\n",
+    "    \"\"\"\n",
+    "    if os.path.exists(best_path):\n",
+    "        prev = np.load(best_path, allow_pickle=True)\n",
+    "        prev_scores = prev[\"top_scores\"].tolist()\n",
+    "        prev_masks  = prev[\"top_masks\"].tolist()\n",
+    "        prev_cols   = prev[\"top_cols\"].tolist()\n",
+    "    else:\n",
+    "        prev_scores, prev_masks, prev_cols = [], [], []\n",
+    "\n",
+    "    # add current solution\n",
+    "    prev_scores.append(float(new_score))\n",
+    "    prev_masks.append(new_mask)\n",
+    "    prev_cols.append(new_cols)\n",
+    "\n",
+    "    # sort by score desc\n",
+    "    order = np.argsort(prev_scores)[::-1]\n",
+    "    order = order[:top_k]\n",
+    "\n",
+    "    top_scores = [prev_scores[i] for i in order]\n",
+    "    top_masks  = [prev_masks[i]  for i in order]\n",
+    "    top_cols   = [prev_cols[i]   for i in order]\n",
+    "\n",
+    "    # save back\n",
+    "    np.savez(\n",
+    "        best_path,\n",
+    "        top_scores=np.array(top_scores, dtype=float),\n",
+    "        top_masks=np.array(top_masks, dtype=object),\n",
+    "        top_cols=np.array(top_cols, dtype=object),\n",
+    "    )\n",
+    "    return top_scores\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "64dc27a5",
+   "metadata": {},
+   "source": [
+    "## Repeated GA with stratified 5-fold CV (20×) and global top-5 tracking"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "90d06900",
    "metadata": {},
    "outputs": [
@@ -543,132 +613,95 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "gen 00  best_acc=0.6500  on_features=508\n",
-      "gen 01  best_acc=0.6722  on_features=481\n",
-      "gen 02  best_acc=0.6778  on_features=457\n",
-      "gen 03  best_acc=0.6778  on_features=457\n",
-      "gen 04  best_acc=0.6972  on_features=448\n",
-      "gen 05  best_acc=0.7000  on_features=459\n",
-      "gen 06  best_acc=0.7000  on_features=459\n",
-      "gen 07  best_acc=0.7000  on_features=459\n",
-      "gen 08  best_acc=0.7000  on_features=459\n",
-      "gen 09  best_acc=0.7000  on_features=459\n",
-      "saved after 0-9\n"
+      "run 00  gen 00  best_acc=0.6500  on_features=508\n",
+      "run 00  gen 01  best_acc=0.6722  on_features=481\n",
+      "run 00  gen 02  best_acc=0.6778  on_features=457\n",
+      "[info] current top scores: [0.6777777777777778, 0.6777777777777778]\n",
+      "run 01  gen 00  best_acc=0.5944  on_features=508\n",
+      "run 01  gen 01  best_acc=0.5944  on_features=508\n",
+      "run 01  gen 02  best_acc=0.5944  on_features=508\n",
+      "[info] current top scores: [0.6777777777777778, 0.6777777777777778, 0.5944444444444444]\n",
+      "run 02  gen 00  best_acc=0.7194  on_features=508\n",
+      "run 02  gen 01  best_acc=0.7194  on_features=508\n",
+      "run 02  gen 02  best_acc=0.7194  on_features=508\n",
+      "[info] current top scores: [0.7194444444444444, 0.6777777777777778, 0.6777777777777778, 0.5944444444444444]\n",
+      "run 03  gen 00  best_acc=0.6111  on_features=508\n",
+      "run 03  gen 01  best_acc=0.6167  on_features=506\n",
+      "run 03  gen 02  best_acc=0.6167  on_features=506\n",
+      "[info] current top scores: [0.7194444444444444, 0.6777777777777778, 0.6777777777777778, 0.6166666666666666, 0.5944444444444444]\n",
+      "run 04  gen 00  best_acc=0.6917  on_features=508\n",
+      "run 04  gen 01  best_acc=0.6917  on_features=508\n",
+      "run 04  gen 02  best_acc=0.6917  on_features=508\n",
+      "[info] current top scores: [0.7194444444444444, 0.6916666666666667, 0.6777777777777778, 0.6777777777777778, 0.6166666666666666]\n",
+      "run 05  gen 00  best_acc=0.6972  on_features=508\n",
+      "run 05  gen 01  best_acc=0.7194  on_features=493\n"
      ]
     }
    ],
    "source": [
-    "# =========================\n",
-    "# 2. chunk 1: gen 0~9\n",
-    "# =========================\n",
-    "# start fresh population\n",
-    "pop = initilization_of_population(size=size, n_feat=n_feat)\n",
+    "N_REPEATS = 20          # run GA 20 times (like paper)\n",
+    "GENS_PER_RUN = 3        # gens per repeat\n",
+    "BEST_PATH = \"../data/ga_best.npz\"\n",
+    "TOP_K = 5\n",
     "\n",
-    "history_chromo = []\n",
-    "history_score  = []\n",
+    "for run in range(N_REPEATS):\n",
+    "    # 1) 5-fold for THIS repeat (different split each time)\n",
+    "    kfold = StratifiedKFold(\n",
+    "        n_splits=5,\n",
+    "        shuffle=True,\n",
+    "        random_state=42 + run,\n",
+    "    )\n",
     "\n",
-    "for gen in range(10):  # 0..9\n",
-    "    pop, bc, bs = ga_one_step(pop, size=size, crossover_rate=0.8, mutation_rate=0.05)\n",
-    "    print(f\"gen {gen:02d}  best_acc={bs:.4f}  on_features={bc.sum()}\")\n",
-    "    history_chromo.append(bc)\n",
-    "    history_score.append(bs)\n",
+    "    # 2) fresh population for THIS repeat\n",
+    "    pop = initilization_of_population(size=size, n_feat=n_feat)\n",
+    "    history_chromo = []\n",
+    "    history_score = []\n",
     "\n",
-    "# save to disk\n",
-    "np.save(GA_POP_PATH, np.array(pop, dtype=object))\n",
-    "np.save(GA_SCORE_PATH, np.array(history_score))\n",
-    "print(\"saved after 0-9\")\n"
+    "    # 3) GA for a few generations\n",
+    "    for gen in range(GENS_PER_RUN):\n",
+    "        pop, bc, bs = ga_one_step(\n",
+    "            pop,\n",
+    "            size=size,\n",
+    "            crossover_rate=0.8,\n",
+    "            mutation_rate=0.05,\n",
+    "        )\n",
+    "        print(f\"run {run:02d}  gen {gen:02d}  best_acc={bs:.4f}  on_features={bc.sum()}\")\n",
+    "        history_chromo.append(bc)\n",
+    "        history_score.append(bs)\n",
+    "\n",
+    "    # 4) best in THIS repeat\n",
+    "    best_idx = int(np.argmax(history_score))\n",
+    "    best_score = float(history_score[best_idx])\n",
+    "    best_mask  = history_chromo[best_idx]\n",
+    "    best_cols  = np.where(best_mask)[0]\n",
+    "\n",
+    "    # 5) update global top-5 (your existing function)\n",
+    "    top_scores = update_top_solutions(\n",
+    "        BEST_PATH,\n",
+    "        best_score,\n",
+    "        best_mask,\n",
+    "        best_cols,\n",
+    "        top_k=TOP_K,\n",
+    "    )\n",
+    "    print(\"[info] current top scores:\", top_scores)\n",
+    "\n",
+    "    # 6) overwrite common state (optional)\n",
+    "    # np.save(\"../data/ga_pop.npy\",     np.array(pop, dtype=object))\n",
+    "    # np.save(\"../data/ga_scores.npy\",  np.array(history_score, dtype=float))\n",
+    "    # np.save(\"../data/ga_chromos.npy\", np.array(history_chromo, dtype=object))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "d8c28cc0",
+   "cell_type": "markdown",
+   "id": "bad2fccc",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "gen 10  best_acc=0.7000  on_features=459\n",
-      "gen 11  best_acc=0.7000  on_features=459\n",
-      "gen 12  best_acc=0.7000  on_features=459\n",
-      "gen 13  best_acc=0.7000  on_features=459\n",
-      "gen 14  best_acc=0.7000  on_features=459\n",
-      "gen 15  best_acc=0.7000  on_features=459\n",
-      "gen 16  best_acc=0.7000  on_features=459\n",
-      "gen 17  best_acc=0.7000  on_features=459\n",
-      "gen 18  best_acc=0.7000  on_features=459\n",
-      "gen 19  best_acc=0.7000  on_features=459\n",
-      "saved after 10-19\n"
-     ]
-    }
-   ],
    "source": [
-    "# ================================\n",
-    "# 2. chunk 2: gen 10~19\n",
-    "# (run later, in a new cell)\n",
-    "# ================================\n",
-    "pop = list(np.load(GA_POP_PATH, allow_pickle=True))\n",
-    "history_score = list(np.load(GA_SCORE_PATH, allow_pickle=True))\n",
-    "\n",
-    "for gen in range(10, 20):   # 10..19\n",
-    "    pop, bc, bs = ga_one_step(pop, size=size, crossover_rate=0.8, mutation_rate=0.05)\n",
-    "    print(f\"gen {gen:02d}  best_acc={bs:.4f}  on_features={bc.sum()}\")\n",
-    "    history_chromo.append(bc)\n",
-    "    history_score.append(bs)\n",
-    "\n",
-    "np.save(GA_POP_PATH, np.array(pop, dtype=object))\n",
-    "np.save(GA_SCORE_PATH, np.array(history_score))\n",
-    "print(\"saved after 10-19\")\n"
+    "# Show only the first 5 selected columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "b93e7b97",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "gen 20  best_acc=0.7000  on_features=459\n",
-      "gen 21  best_acc=0.7194  on_features=371\n",
-      "gen 22  best_acc=0.7194  on_features=371\n",
-      "gen 23  best_acc=0.7194  on_features=371\n",
-      "gen 24  best_acc=0.7194  on_features=371\n",
-      "gen 25  best_acc=0.7194  on_features=371\n",
-      "gen 26  best_acc=0.7194  on_features=371\n",
-      "gen 27  best_acc=0.7194  on_features=371\n",
-      "gen 28  best_acc=0.7222  on_features=372\n",
-      "gen 29  best_acc=0.7222  on_features=372\n",
-      "saved after 20-29\n"
-     ]
-    }
-   ],
-   "source": [
-    "# ================================\n",
-    "# 3. chunk 3: gen 20~29 + pick features\n",
-    "# ================================\n",
-    "pop = list(np.load(GA_POP_PATH, allow_pickle=True))\n",
-    "history_score = list(np.load(GA_SCORE_PATH, allow_pickle=True))\n",
-    "\n",
-    "history_chromo = []\n",
-    "\n",
-    "for gen in range(20, 30):   # 20..29\n",
-    "    pop, bc, bs = ga_one_step(pop, size=size, crossover_rate=0.8, mutation_rate=0.05)\n",
-    "    print(f\"gen {gen:02d}  best_acc={bs:.4f}  on_features={bc.sum()}\")\n",
-    "    history_chromo.append(bc)\n",
-    "    history_score.append(bs)\n",
-    "\n",
-    "np.save(GA_POP_PATH, np.array(pop, dtype=object))\n",
-    "np.save(GA_SCORE_PATH, np.array(history_score))\n",
-    "print(\"saved after 20-29\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "d2439c29",
    "metadata": {},
    "outputs": [
@@ -676,18 +709,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "first 30 selected: [ 0  4  6  8  9 18 21 22 23 24 26 29 33 34 36 38 39 40 41 42 43 47 48 49\n",
-      " 51 52 53 55 57 58]\n",
-      "total selected: 372\n"
+      "=== TOP GA SOLUTIONS ===\n",
+      "1. score=0.6778  cols(first 5): [1, 3, 4, 5, 6]  total=457\n"
      ]
     }
    ],
    "source": [
-    "# inspect last/best chromosome\n",
-    "best_mask = pop[0]\n",
-    "selected_cols = np.where(best_mask)[0]\n",
-    "print(\"first 30 selected:\", selected_cols[:30])\n",
-    "print(\"total selected:\", len(selected_cols))"
+    "path = \"../data/ga_best.npz\"\n",
+    "\n",
+    "if os.path.exists(path):\n",
+    "    best = np.load(path, allow_pickle=True)\n",
+    "    top_scores = best[\"top_scores\"].tolist()\n",
+    "    top_cols   = best[\"top_cols\"].tolist()\n",
+    "\n",
+    "    print(\"=== TOP GA SOLUTIONS ===\")\n",
+    "    for i, (s, cols) in enumerate(zip(top_scores, top_cols), start=1):\n",
+    "        preview = cols[:5]\n",
+    "        print(f\"{i}. score={s:.4f}  cols(first {len(preview)}): {preview}  total={len(cols)}\")\n",
+    "else:\n",
+    "    print(\"no GA best file yet.\")"
    ]
   }
  ],
