Add detailed code explanations and comments to mgmt_ga_rf_template and original_algorithm_rf

--- a/code/mgmt_ga_rf_template.ipynb
+++ b/code/mgmt_ga_rf_template.ipynb
@@ -12,8 +12,7 @@
     "- get floor performance using dummy classifiers,\n",
     "- train a plain Random Forest on all radiomics features,\n",
     "- plug in a GA-selected feature subset to train GA-RF.\n",
-    "\n",
-    "All comments in the code are in English so you can paste this into GitHub or a report.\n"
+    "- make ROC curve and show result through hyperparameter tuning\n"
    ]
   },
   {
@@ -170,7 +169,7 @@
    "source": [
     "## 3. Plain Random Forest (no GA)\n",
     "\n",
-    "We now train a real model on **all 725 radiomics features** using only the 42 training cases.  \n",
+    "We now train a real model on **all 38 radiomics features** using 54 training cases.  \n",
     "Because the training set is small and high-dimensional, we first run a 5-fold **stratified** cross-validation on the training set to get a more stable estimate.  \n",
     "\n"
    ]
